feat: add registration for vet_profile nor producer_profile
